// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`capabilities limitations fetchPhoneCapabilities should resolve with a map of phone number capabilities by country 1`] = `
{
  "AU": {
    "Local": {
      "mms": false,
      "sms": false,
      "voice": true,
      "whatsapp": true,
    },
  },
  "CA": {
    "Local": {
      "mms": true,
      "sms": true,
      "voice": true,
      "whatsapp": true,
    },
    "TollFree": {
      "mms": true,
      "sms": true,
      "voice": true,
      "whatsapp": true,
    },
  },
  "GB": {
    "Local": {
      "mms": false,
      "sms": true,
      "voice": true,
      "whatsapp": true,
    },
    "Mobile": {
      "mms": false,
      "sms": true,
      "voice": true,
      "whatsapp": true,
    },
    "National": {
      "mms": false,
      "sms": true,
      "voice": true,
      "whatsapp": true,
    },
  },
  "US": {
    "Local": {
      "mms": true,
      "sms": true,
      "voice": true,
      "whatsapp": true,
    },
    "TollFree": {
      "mms": true,
      "sms": true,
      "voice": true,
      "whatsapp": true,
    },
  },
}
`;

exports[`phone numbers resources createPhoneNumber should resolve with a new PhoneNumber on success 1`] = `
{
  "capabilities": {
    "mms": true,
    "sms": true,
    "voice": true,
    "whatsapp": true,
  },
  "created_datetime": "2021-12-01T18:00:00.000000+00:00",
  "deleted_datetime": null,
  "id": 1,
  "integrations": [],
  "meta": {
    "area_code": 415,
    "country": "US",
    "emoji": null,
    "friendly_name": "+1 213 373 4253",
    "state": "CA",
    "type": "Local",
  },
  "name": "A Phone Number",
  "phone_number": "+12133734253",
  "phone_number_id": 1,
  "updated_datetime": "2021-12-01T18:00:00.000000+00:00",
}
`;

exports[`phone numbers resources createPhoneNumber should resolve with a new PhoneNumber on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "allowAbsoluteUrls": true,
      "data": "{"name":"A Phone Number"}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/integrations/phone/phone-numbers/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`phone numbers resources deletePhoneNumber should resolve on success 1`] = `undefined`;

exports[`phone numbers resources fetchPhoneNumbers should resolve with a PhoneNumber list on success 1`] = `
{
  "data": [
    {
      "capabilities": {
        "mms": true,
        "sms": true,
        "voice": true,
        "whatsapp": true,
      },
      "created_datetime": "2021-12-01T18:00:00.000000+00:00",
      "deleted_datetime": null,
      "id": 1,
      "integrations": [],
      "meta": {
        "area_code": 415,
        "country": "US",
        "emoji": null,
        "friendly_name": "+1 213 373 4253",
        "state": "CA",
        "type": "Local",
      },
      "name": "A Phone Number",
      "phone_number": "+12133734253",
      "phone_number_id": 1,
      "updated_datetime": "2021-12-01T18:00:00.000000+00:00",
    },
    {
      "capabilities": {
        "mms": true,
        "sms": true,
        "voice": true,
        "whatsapp": true,
      },
      "created_datetime": "2021-12-01T18:00:00.000000+00:00",
      "deleted_datetime": null,
      "id": 2,
      "integrations": [],
      "meta": {
        "area_code": 813,
        "country": "CA",
        "emoji": null,
        "friendly_name": "+1 213 373 4255",
        "type": "TollFree",
      },
      "name": "Another Phone Number",
      "phone_number": "+12133734255",
      "phone_number_id": 2,
      "updated_datetime": "2021-12-01T18:00:00.000000+00:00",
    },
    {
      "address": {
        "address": "SomethingVile, Somewhere",
        "business_name": "ACME",
        "city": "SomethingVile",
        "country": "GB",
        "postal_code": "123",
        "region": "Somewhere",
        "type": "company",
      },
      "capabilities": {
        "mms": false,
        "sms": false,
        "voice": true,
        "whatsapp": true,
      },
      "created_datetime": "2021-12-01T18:00:00.000000+00:00",
      "deleted_datetime": null,
      "id": 3,
      "integrations": [],
      "meta": {
        "area_code": 7,
        "country": "GB",
        "emoji": null,
        "friendly_name": "+44 7123 456789",
        "type": "Mobile",
      },
      "name": "Intl. Phone Number",
      "phone_number": "+1 213 373 4253",
      "phone_number_id": 3,
      "updated_datetime": "2021-12-01T18:00:00.000000+00:00",
    },
  ],
  "meta": {
    "current_page": 2,
  },
}
`;

exports[`phone numbers resources updatePhoneNumber should resolve with the updated phone number on success 1`] = `
{
  "capabilities": {
    "mms": true,
    "sms": true,
    "voice": true,
    "whatsapp": true,
  },
  "created_datetime": "2021-12-01T18:00:00.000000+00:00",
  "deleted_datetime": null,
  "id": 1,
  "integrations": [],
  "meta": {
    "area_code": 415,
    "country": "US",
    "emoji": null,
    "friendly_name": "+1 213 373 4253",
    "state": "CA",
    "type": "Local",
  },
  "name": "A Phone Number",
  "phone_number": "+12133734253",
  "phone_number_id": 1,
  "updated_datetime": "2021-12-01T18:00:00.000000+00:00",
}
`;

exports[`phone numbers resources updatePhoneNumber should resolve with the updated phone number on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "allowAbsoluteUrls": true,
      "data": "{"id":1,"name":"A Phone Number","phone_number":"+12133734253","phone_number_id":1,"created_datetime":"2021-12-01T18:00:00.000000+00:00","updated_datetime":"2021-12-01T18:00:00.000000+00:00","deleted_datetime":null,"meta":{"emoji":null,"type":"Local","friendly_name":"+1 213 373 4253","state":"CA","country":"US","area_code":415},"integrations":[],"capabilities":{"sms":true,"voice":true,"mms":true,"whatsapp":true}}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/integrations/phone/phone-numbers/1/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "unlink": [],
}
`;
